# docs

design/: Makefile.am  TODO  configuration.sgml  configure.ac  design.sgml  hpib.sgml  library.sgml  template.sgml
design/diagrams/: openhpi_block_diagram2.xcf
docs/branches/sdague/design/: .emacs_sdague  introduction.sgml
docs/trunk/design/: Makefile.am  authors.dtd  design.sgml  introduction.sgml
docs/trunk/hpib/: hpi.diff
hpib/: hpi_a.data  hpi_b.data
